--- a/page.codeberg.JakobDev.jdDiff.yaml
+++ b/page.codeberg.JakobDev.jdDiff.yaml
@@ -1,9 +1,9 @@
 id: page.codeberg.JakobDev.jdDiff
 runtime: org.kde.Platform
-runtime-version: '6.6'
+runtime-version: '6.7'
 sdk: org.kde.Sdk
 base: com.riverbankcomputing.PyQt.BaseApp
-base-version: '6.6'
+base-version: '6.7'
 command: jddiff
 cleanup-commands:
   - /app/cleanup-BaseApp.sh
@@ -32,3 +32,5 @@ modules:
           url: https://codeberg.org/api/v1/repos/JakobDev/jdDiff/releases/latest
           version-query: .tag_name
           url-query: .tarball_url
+      - type: patch
+        path: fix-appstream.patch
